--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,34 @@
+[metadata]
+name = xnatuploader
+version = 0.0.1
+author = Mike Lynch
+author_email = m.lynch@sydney.edu.au
+description = CLI tool for uploading multiple files to XNAT
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/SydneyInformaticsHub/xnatuploader
+project_urls =
+    Bug Tracker = https://github.com/SydneyInformaticsHub/xnatuploader/issues
+classifiers =
+    Programming Language :: Python :: 3
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
+    Development Status :: 4 - Beta
+
+[options]
+package_dir =
+    = src
+packages = find:
+python_requires = >=3.9
+install_requires=[ xnatutils, openpyxl >= 3.0.10]
+
+[options.packages.find]
+where = src
+
+[options.entry_points]
+console_scripts = 
+	xnatuploader = [ xnatuploader:main ]
+
 [flake8]
 ignore = E501, W503, E203
 
