Rearranging things for packaging

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,19 +19,21 @@ classifiers =
 package_dir =
     = src
 packages = find:
-python_requires = >=3.9
-install_requires=[ xnatutils, openpyxl >= 3.0.10]
+install_requires =
+	xnatutils
+	openpyxl >= "3.0.10"
 
 [options.packages.find]
 where = src
 
 [options.entry_points]
 console_scripts = 
-	xnatuploader = [ xnatuploader:main ]
+	xnatuploader = xnatuploader.xnatuploader:main
 
 [flake8]
 ignore = E501, W503, E203
 
 [tool:pytest]
+pythonpath = src
 log_cli = True
 norecursedirs = .git search __pycache__
