--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ packages = find:
 install_requires =
 	xnatutils
 	openpyxl >= "3.0.10"
+    pydicom >= "2.3.0"
 
 [options.packages.find]
 where = src
