Added pytest and xnat4tests as optional requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,11 @@ install_requires =
 	openpyxl >= "3.0.10"
     pydicom >= "2.3.0"
 
+[options.extras_require]
+test = 
+    pytest
+    xnat4tests
+
 [options.packages.find]
 where = src
 
