Fixed a typo in the test fixtures directory which broke sanitisation tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,5 +42,5 @@ ignore = E501, W503, E203
 
 [tool:pytest]
 pythonpath = src
-log_cli = True
+log_cli = False
 norecursedirs = .git search __pycache__
