xnat4tests.launch_xnat is now start_xnat

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ install_requires =
 [options.extras_require]
 test = 
     pytest
-    xnat4tests
+    xnat4tests >> "0.3.2"
 
 [options.packages.find]
 where = src
