--- a/setup.cfg
+++ b/setup.cfg
@@ -44,4 +44,5 @@ ignore = E501, W503, E203
 [tool:pytest]
 pythonpath = src
 log_cli = False
+log_cli_level = INFO
 norecursedirs = .git search __pycache__
