Removed double-quotes around versions because the latest version of setuptools doesn't like them, also bumped version 1.0.0 -> 1.0.1

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = xnatuploader
-version = 1.0.0
+version = 1.0.1
 author = Mike Lynch
 author_email = m.lynch@sydney.edu.au
 description = CLI tool for uploading multiple files to XNAT
@@ -21,15 +21,15 @@ package_dir =
 packages = find:
 install_requires =
 	xnatutils
-	openpyxl >= "3.0.10"
-    pydicom >= "2.3.0"
+	openpyxl >= 3.0.10
+    pydicom >= 2.3.0
     tqdm
     click
 
 [options.extras_require]
 test = 
     pytest
-    xnat4tests >= "0.3.2"
+    xnat4tests >= 0.3.2
 
 [options.packages.find]
 where = src
