--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ package_dir =
 packages = find:
 install_requires =
 	xnatutils
+    xnat == 0.4.3
 	openpyxl >= 3.0.10
     pydicom >= 2.3.0
     tqdm
