First cut of local dicom anonymisation

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,10 +20,11 @@ package_dir =
     = src
 packages = find:
 install_requires =
-	xnatutils
+    xnatutils
     xnat == 0.4.3
-	openpyxl >= 3.0.10
+    openpyxl >= 3.0.10
     pydicom >= 2.3.0
+    dicom-anonymizer >= 1.0.11
     tqdm
     click
 
